--- a/shopping-list/src/Components/CookBook/CookBook.css
+++ b/shopping-list/src/Components/CookBook/CookBook.css
@@ -5,7 +5,8 @@
   align-items: center;
   background-color: pink;
   width: 100%;
-  height: 600px;
+  height: auto;
+  padding: 10px;
 }
 
 .cookbookentries {
