--- a/shopping-list/src/Components/CookBook/CookBookEntry.css
+++ b/shopping-list/src/Components/CookBook/CookBookEntry.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   border: #333 2px solid;
-  height: 200px;
+  height: auto;
   width: 200px;
+  padding: 10px;
 }
