--- a/shopping-list/src/Components/RecipeForm.css
+++ b/shopping-list/src/Components/RecipeForm.css
@@ -6,6 +6,7 @@
   background-color: aqua;
   width: 100%;
   height: auto;
+  padding: 10px;
 }
 
 .ingredients {
