--- a/shopping-list/src/Components/ShoppingList/ShoppingList.css
+++ b/shopping-list/src/Components/ShoppingList/ShoppingList.css
@@ -5,5 +5,6 @@
   align-items: center;
   background-color: palegreen;
   width: 100%;
-  height: 600px;
+  height: auto;
+  padding: 10px;
 }
