--- a/shopping-list/src/Components/ShoppingList/ShoppingListItem.css
+++ b/shopping-list/src/Components/ShoppingList/ShoppingListItem.css
@@ -4,4 +4,5 @@
   justify-content: center;
   align-items: center;
   padding: 5px;
+  margin-bottom: 10px;
 }
